WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37996
[EFL] Fix EWebLauncher to find the theme files in the correct path
https://bugs.webkit.org/show_bug.cgi?id=37996
Summary
[EFL] Fix EWebLauncher to find the theme files in the correct path
Leandro Pereira
Reported
2010-04-22 10:47:59 PDT
Attached patch implements findThemePath() in EWebLauncher so that it finds the default theme file in the correct location instead of relying on a hardcoded path.
Attachments
Implement findThemePath() in EWebLauncher
(6.46 KB, patch)
2010-04-22 10:48 PDT
,
Leandro Pereira
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Leandro Pereira
Comment 1
2010-04-22 10:48:28 PDT
Created
attachment 54073
[details]
Implement findThemePath() in EWebLauncher
Gustavo Noronha (kov)
Comment 2
2010-04-22 11:25:54 PDT
Comment on
attachment 54073
[details]
Implement findThemePath() in EWebLauncher Yeah, looks sane to me.
WebKit Commit Bot
Comment 3
2010-04-22 16:00:33 PDT
Comment on
attachment 54073
[details]
Implement findThemePath() in EWebLauncher Clearing flags on attachment: 54073 Committed
r58124
: <
http://trac.webkit.org/changeset/58124
>
WebKit Commit Bot
Comment 4
2010-04-22 16:00:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug