2010-04-22  Leandro Pereira  <leandro@profusion.mobi>

Reviewed by Gustavo Noronha Silva.

        Implement findThemePath to locate the correct theme file instead of
        relying on a hardcoded location.
        http://webkit.org/b/37996

        * efl/EWebLauncher/main.c:
        (findThemePath): Fix to locate the correct theme files.
        (main): Use findThemePath() instead of a hardcoded one.

Canonical link: https://commits.webkit.org/49405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58124 268f45cc-cd09-0410-ab3c-d52691b4dbfc